crates/codegraph/tests/snapshots/include_snapshot_tests__dto_included_dot_notation.snap
---
source: crates/codegraph/tests/include_snapshot_tests.rs
expression: content
---
//! Included DTO for Worker eager-loading via `?include=`.
//! Generated by codegraph. DO NOT EDIT.

use serde::{Deserialize, Serialize};
use utoipa::ToSchema;
use uuid::Uuid;
use crate::domain::hr::worker::dto_response::WorkerLinkedResponse;


pub use crate::codelist::AssignmentReasonCodeList;


/// Included data for `?include=` eager-loading.
#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
pub struct WorkerIncludedData {

    #[serde(skip_serializing_if = "Option::is_none")]
    pub deployment: Option<DeploymentCombinedResponse>,

}




/// Enriched response type for dot-notation include path.
#[derive(Debug, Clone, Default, Serialize, Deserialize, ToSchema)]
pub struct DeploymentCombinedResponse {

    pub id: Uuid,

    pub assignment_reason_code: Option<AssignmentReasonCodeList>,

    pub full_time_equivalent_ratio: Option<rust_decimal::Decimal>,

    pub position_id: Option<uuid::Uuid>,

    pub created_at: chrono::DateTime<chrono::Utc>,

    pub updated_at: chrono::DateTime<chrono::Utc>,


    #[serde(skip_serializing_if = "Option::is_none")]
    pub position: Option<PositionResponse>,

}



/// Top-level response for Worker with optional included data.
#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
pub struct WorkerWithIncludeResponse {
    pub data: WorkerLinkedResponse,
    pub included: Option<WorkerIncludedData>,
    pub meta: Meta,
}
