crates/codegraph/tests/snapshots/include_snapshot_tests__dto_included_worker.snap
---
source: crates/codegraph/tests/include_snapshot_tests.rs
expression: "&included_file.content"
---
//! Included DTO for Worker eager-loading via `?include=`.
//! Generated by codegraph. DO NOT EDIT.

use serde::{Deserialize, Serialize};
use utoipa::ToSchema;
use crate::domain::hr::worker::dto_response::WorkerLinkedResponse;


/// Included data for `?include=` eager-loading.
#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
pub struct WorkerIncludedData {

    #[serde(skip_serializing_if = "Option::is_none")]
    pub person: Option<PersonResponse>,

}



/// Top-level response for Worker with optional included data.
#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
pub struct WorkerWithIncludeResponse {
    pub data: WorkerLinkedResponse,
    pub included: Option<WorkerIncludedData>,
    pub meta: Meta,
}
